# fast-belt

./: .gitignore  CMakeLists.txt  ParallelComputeProject.sln  ParallelComputeProject.vcxproj  ParallelComputeProject.vcxproj.filters  README.md  data_prepare.h  main.cpp  package.json  trympi.cpp
render/: GLShader.h  blinn-phong.fs  glCamera.h  glCommon.h  glRender.h  phong.fs
x64/Debug/: ParallelComputeProject.ilk  vc140.idb
x64/Debug/Parallel.EBDCCB66.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ParallelComputeProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: ParallelComputeProject.iobj  ParallelComputeProject.ipdb
x64/Release/Parallel.EBDCCB66.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ParallelComputeProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
